initial : first start
